fix: fixed overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
 .App-link {
   color: #61dafb;
 }
+.response-container {
+  height: 90vh;
+  overflow-y: scroll;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -36,4 +40,3 @@
     transform: rotate(360deg);
   }
 }
-
